// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Ghost 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bdvvtL sc-brSvTw braPyZ dzxXLz"
  >
    <div
      className="sc-evcjhq hdqrhC"
    >
      Ghost Buttons
    </div>
    <div
      className="sc-evcjhq hdqrhC"
    >
      <div
        className="sc-gIDmLj eDDpVq"
      >
        <button
          className="sc-hGPBjI sc-kfPuZi jGEcwg cyjURS"
          data-element="button"
          size="medium"
          variant="outline"
        >
          All Behaviours
        </button>
      </div>
      <div
        className="sc-gIDmLj eDDpVq"
      >
        <button
          className="sc-hGPBjI sc-kfPuZi jGEcwg cyjURS"
          data-element="button"
          size="medium"
          variant="outline"
        >
          All Tests
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button System 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bdvvtL sc-brSvTw braPyZ dzxXLz"
  >
    <div
      className="sc-evcjhq hdqrhC"
    >
      Rounded Buttons
    </div>
    <div
      className="sc-evcjhq hdqrhC"
    >
      <div
        className="sc-gIDmLj eDDpVq"
      >
        <button
          className="sc-hGPBjI sc-dlVxhl fdJHWR jjjrNB"
          color="success"
          data-element="button"
          size="small"
          variant="rounded"
        >
          Good
        </button>
      </div>
      <div
        className="sc-gIDmLj eDDpVq"
      >
        <button
          className="sc-hGPBjI sc-dlVxhl hKiCXh jjjrNB"
          color="error"
          data-element="button"
          size="small"
          variant="rounded"
        >
          Bad
        </button>
      </div>
      <div
        className="sc-gIDmLj eDDpVq"
      >
        <button
          className="sc-hGPBjI sc-dlVxhl fYXMVG jjjrNB"
          color="warning"
          data-element="button"
          size="small"
          variant="rounded"
        >
          Mediocre
        </button>
      </div>
      <div
        className="sc-gIDmLj eDDpVq"
      >
        <button
          className="sc-hGPBjI sc-dlVxhl eCrKlI jjjrNB"
          color="secondary"
          data-element="button"
          size="small"
          variant="rounded"
        >
          Missing
        </button>
      </div>
    </div>
  </div>
</div>
`;
